# joint-capsule

./: CMakeLists.txt  README.md  package.xml
arduino_sketch/: MultiAdcRead.ino  simple_analog_read.ino
csv/: README.md  filtered_data_roll_over_20deg.csv  filtered_data_x_over_abs_0.002_from_push_back.csv  output_angle90_random.csv  output_push_back.csv  output_whole_all.csv  py_filtered_data_over_70.csv
launch/: joint_tf.launch  joint_tf_for_rosbag.launch  multi_adc.launch
learning_results/feature_analysis/py_filtered_data_over_70/1/: mutual_information_scores.csv  permutation_importance.csv  shap_values_target_0.csv  shap_values_target_1.csv  shap_values_target_2.csv  shap_values_target_3.csv  shap_values_target_4.csv  shap_values_target_5.csv  training_loss.csv
learning_results/feature_analysis/py_filtered_data_over_70/2/: mutual_information_scores.csv  permutation_importance.csv  shap_values_target_0.csv  shap_values_target_1.csv  shap_values_target_2.csv  shap_values_target_3.csv  shap_values_target_4.csv  shap_values_target_5.csv  training_loss.csv
learning_results/redundancy_analysis/: PI_whole_all_reduction_results_multiple_trials.xlsx  PI_whole_all_reduction_results_multiple_trials_for_submission.xlsx
msg/: Int32MultiArrayWithHeader.msg
rviz/: urdf.rviz
script/: learning_adc64_to_rpy_and_translation.py  learning_with_PI_analysis_reduction_multiple_trial.py  learning_with_PI_analysis_reduction_one_trial.py  learning_with_filtering.py
src/: camera_link_frame_copier.cpp  message_filter_and_dump_to_csv.cpp  test_message_filter.cpp  transform_from_link2_to_link1.cpp
tf/: frames.gv
urdf/: joint_capsule.urdf
(+187 files in other folders)
