<?xml version="1.0"?>
<package format="2">
  <name>joint_capsule</name>
  <version>0.0.0</version>
  <description>The joint_capsule package</description>
  <maintainer email="miki@jsk.imi.i.u-tokyo.ac.jp">leus</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
</package>
